[Responsive] Fixes white space gutter near scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 html, body {
   margin: 0px;
+  overflow-x: hidden;
 }
 html {
   position: relative;
   min-height: 100%;
-
 }
 body {
   background-color: #ffffff;
